# angstros

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
config/: build.toml.example  run.toml.example  test.toml.example
data/targetspec/: x86_64-unknown-angstros.json
kernel/common/: Cargo.toml
kernel/common/src/: boot.rs  elf.rs  lib.rs  logger.rs  serial.rs
kernel/kernel/: Cargo.toml
kernel/kernel/src/: allocator.rs  interrupts.rs  main.rs  serial.rs  test.rs  threads.rs
kernel/kernel/src/allocator/: bump.rs  linked_list.rs  region_frame.rs  user_frame.rs
kernel/uefi_stub/: Cargo.toml
kernel/uefi_stub/src/: allocator.rs  elf.rs  main.rs
user/dummy/: Cargo.toml
user/dummy/src/: main.rs
user/os/: Cargo.toml
user/os/src/: lib.rs
user/screen/: Cargo.toml
user/screen/src/: main.rs
user/sys/: Cargo.toml
user/sys/src/: lib.rs
xtask/: Cargo.toml
xtask/src/: build.rs  command.rs  config.rs  main.rs  run.rs
