[package]
name = "common"
version = "0.1.0"
authors = ["Han Mertens <hanmertens@outlook.com>"]
edition = "2018"

[dependencies]
uefi = "0.11"
log = "0.4"
owo-colors = "2"
spin = { version = "0.9", default-features = false, features = ["once", "spin_mutex"] }
uart_16550 = "0.2"
x86_64 = "0.14"
xmas-elf = "0.7"
