[package]
name = "kernel"
version = "0.1.0"
authors = ["Han Mertens <hanmertens@outlook.com>"]
edition = "2018"

[dependencies]
common = { path = "../common" }
log = "0.4"
owo-colors = "2"
spin = { version = "0.9", default-features = false, features = ["once"] }
sys = { path = "../../user/sys" }
pic8259 = "0.10"
uefi = "0.11"
x86_64 = "0.14"
